arc-script/arc-script-test/compile/src/snapshots/hir@if_else.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/if_else.arc

---
fun test(): i32 {
    val x_0: bool = true;
    val x_1: bool = false;
    val x_2: i32 = 3;
    val x_5: i32 = if x_0 {
        val x_3: i32 = if x_1 {
            x_2
        } else {
            x_2
        };
        x_3
    } else {
        val x_4: i32 = if x_1 {
            x_2
        } else {
            x_2
        };
        x_4
    };
    x_5
}

