arc-script/arc-script-test/compile/src/snapshots/hir@if_let.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/if_let.arc
---
fun x_3(y_0: i32) -> i32 {
    y_0 + 2
}
fun test() -> i32 {
    let x_0: i32 = 3 in
    let y_0: i32 = 5 in
    let x_1: ((i32, i32), i32) = ((3, x_0), 1) in
    let x_2: (i32, i32) = x_1.0 in
    if x_2.0 == 1 {
        let z_0: i32 = x_2.1 in
        if x_1.1 == 1 {
            z_0 + y_0
        } else {
            crate::x_3(y_0)
        }
    } else {
        crate::x_3(y_0)
    }
}

