arc-script/arc-script-test/compile/src/snapshots/hir@ifs.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/ifs.arc
---
fun main() -> unit {
    unit
}
fun test() -> i32 {
    let a_i32_0: i32 = 65 in
    let b_i32_0: i32 = 66 in
    let true_bool_0: bool = true in
    if true_bool_0 {
        a_i32_0
    } else {
        b_i32_0
    }
}

