arc-script/arc-script-test/compile/src/snapshots/hir@lambda.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/lambda.arc

---
fun x_0(i_0: i32): i32 {
    val x_1: i32 = 1;
    val x_2: i32 = i_0 + x_1;
    x_2
}
fun test(): i32 {
    val x_3: fun(i32): i32 = crate::x_0;
    val x_4: i32 = 1;
    val x_5: i32 = x_3(x_4);
    x_5
}

