arc-script/arc-script-test/compile/src/snapshots/hir@literals.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/literals.arc
---
fun test() -> i32 {
    let pos_i8_0: i8 = 127i8 in
    let neg_i8_0: i8 = -128i8 in
    let pos_i16_0: i16 = 32767i16 in
    let neg_i16_0: i16 = -32768i16 in
    let pos_i32_0: i32 = 2147483647 in
    let neg_i32_0: i32 = -2147483648 in
    let pos_i64_0: i64 = 9223372036854775807i64 in
    let neg_i64_0: i64 = -9223372036854775808i64 in
    let pos_u8_0: u8 = 255u8 in
    let pos_u16_0: u16 = 65535u16 in
    let pos_u32_0: u32 = 4294967295u32 in
    let pos_u64_0: u64 = 18446744073709551615u64 in
    let pos_bf16_0: bf16 = 338953140000000000000000000000000000000bf16 in
    let neg_bf16_0: bf16 = -117636680000000000000000000000000000000bf16 in
    let pos_f16_0: f16 = 65504f16 in
    let neg_f16_0: f16 = -65504f16 in
    let pos_f32_0: f32 = 3.4028235e38f32 in
    let neg_f32_0: f32 = -3.4028235e38f32 in
    let pos_f64_0: f64 = 1.7976931348623157e308 in
    let neg_f64_0: f64 = -1.7976931348623157e308 in
    let true_bool_0: bool = true in
    let false_bool_0: bool = false in
    4711
}

