arc-script/arc-script-test/compile/src/snapshots/hir@map_state.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/map_state.arc

---
task MapCount() ~{ val: i32, key: i32 } -> ~{ val: i32, key: i32 } {
    state c_0: {i32 => i32} = {}
    on {
        x_0: { key: i32, val: i32 } => {
            let event_0: i32 = x_0.val in
            let key_0: i32 = x_0.key in
            c_0[event_0] = c_0[event_0] + 1;
            emit { val: c_0[event_0], key: key_0 }
        }
    }
}

